--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --primary-color: #000000;
   }
-}
+  
+  /* Hide Scrollbar for chrome, safari and opera */
+  body::-webkit-scrollbar{
+    display: none;
+  }
+  
+  .hero-bg-image{
+    background-image: url(/bg.jpg);
+  }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .z-index{
+        font-weight: 800;
+        font-size: 7.5rem;
+        line-height: 151px;
+        color: #2f2f2f;
+        position: absolute;
+        z-index: -2;
+    
+  }
